# pdf2text

grobid/: README.md  pyproject.toml  requirements.txt
grobid/src/grobid/: grobid_config.json
grobid/src/l3hiai_pdf2text/: main.py  pdf_downloader.py  text_processing.py  utils.py
test/: pdf_to_text_2024-07-31 15:45:02.040513.json  test_pdf2text.py
